Finally managed to get update timing to work properly
Android's AlarmManager is really messed up, and certainly doesn't do what it says it does....

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,9 +33,11 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".widget.MenuWidget" >
+        <receiver android:name=".widget.MenuWidget"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
