--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nickivy.ucscdining"
     android:versionCode="1"
-    android:versionName="0.7.5" >
+    android:versionName="0.7.6" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light" >
         <activity
