--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nickivy.ucscdining"
     android:versionCode="1"
-    android:versionName="0.8.1" >
+    android:versionName="0.8.2" >
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="22" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -27,7 +27,8 @@
         <activity
             android:name=".PreferencesActivity"
             android:label="@string/about"
-            android:parentActivityName="com.nickivy.ucscdining.MainActivity"/>
+            android:parentActivityName="com.nickivy.ucscdining.MainActivity"
+            android:launchMode="singleInstance"/>
 
         <receiver android:name=".widget.MenuWidget"
             android:exported="true">
