--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nickivy.ucscdining"
     android:versionCode="1"
-    android:versionName="0.9" >
+    android:versionName="0.9.1" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -27,6 +27,11 @@
         <activity
             android:name=".PreferencesActivity"
             android:label="@string/about"
+            android:parentActivityName="com.nickivy.ucscdining.MainActivity"
+            android:launchMode="singleInstance"/>
+        <activity
+            android:name=".NutritionWebpageActivity"
+            android:label="@string/nutinfo"
             android:parentActivityName="com.nickivy.ucscdining.MainActivity"
             android:launchMode="singleInstance"/>
 
