--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,6 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:support-v4:22.1.1'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile files('libs/jsoup-1.8.2.jar')
 }
