--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nickivy.ucscdining"
     android:versionCode="1"
-    android:versionName="0.9.4" >
+    android:versionName="0.9.5" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light" >
+        android:theme="@style/MainThemeColorful" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
