--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nickivy.ucscdining"
     android:versionCode="1"
-    android:versionName="0.9.6" >
+    android:versionName="1.0.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -54,7 +54,8 @@
         </receiver>
 
         <service android:name="com.nickivy.ucscdining.widget.WidgetService"
-            android:exported="false"
+            android:exported="true"
+            android:enabled="true"
             android:permission="android.permission.BIND_REMOTEVIEWS"/>
 
     </application>
