--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.nickivy.ucscdining"
+        applicationId "com.nickivy.slugfood"
         minSdkVersion 14
         targetSdkVersion 22
     }
