--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nickivy.slugfood"
-    android:versionCode="8"
-    android:versionName="1.1.6" >
+    android:versionCode="9"
+    android:versionName="1.2" >
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="22" />
+        android:targetSdkVersion="23" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
-        android:theme="@style/MainThemeColorful" >
+        android:theme="@style/MainTheme.Colorful" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
