--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nickivy.slugfood"
-    android:versionCode="9"
-    android:versionName="1.2" >
+    android:versionCode="10"
+    android:versionName="1.3" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -35,6 +35,14 @@
         </activity>
         <activity
             android:name=".NutritionWebpageActivity"
+            android:label="@string/nutinfo"
+            android:parentActivityName="com.nickivy.slugfood.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.nickivy.slugfood.MainActivity" />
+        </activity>
+        <activity
+            android:name=".NutritionViewActivity"
             android:label="@string/nutinfo"
             android:parentActivityName="com.nickivy.slugfood.MainActivity">
             <meta-data
