--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="23" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -29,14 +30,6 @@
             android:label="@string/about"
             android:parentActivityName="com.nickivy.slugfood.MainActivity">
             <!-- Include metadata for ICS compatibility -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.nickivy.slugfood.MainActivity" />
-        </activity>
-        <activity
-            android:name=".NutritionWebpageActivity"
-            android:label="@string/nutinfo"
-            android:parentActivityName="com.nickivy.slugfood.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.nickivy.slugfood.MainActivity" />
