--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile files('libs/jsoup-1.8.2.jar')
+    compile files('libs/biweekly-0.4.3.jar')
 }
