--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,6 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
-    compile files('libs/jsoup-1.8.2.jar')
+    compile 'com.android.support:design:25.0.1'
+    compile files('libs/jsoup-1.10.1.jar')
 }
