--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nickivy.slugfood"
-    android:versionCode="24"
-    android:versionName="1.6.7" >
+    android:versionCode="25"
+    android:versionName="1.6.8" >
 
     <!--uses-sdk
         android:minSdkVersion="14"
@@ -20,7 +20,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
-        android:theme="@style/MainTheme.Colorful" >
+        android:theme="@style/MainTheme.Colorful"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
