--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
-        android:theme="@style/MainTheme.Colorful"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:theme="@style/MainTheme.Colorful">
+        <!--android:networkSecurityConfig="@xml/network_security_config"-->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
