--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.nickivy.slugfood"
@@ -20,11 +20,17 @@ android {
     }
     namespace 'com.nickivy.slugfood'
 
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation files('libs/jsoup-1.14.3.jar')
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation files('libs/jsoup-1.17.2.jar')
+    implementation 'io.github.hakky54:sslcontext-kickstart:8.3.4'
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
 }
