--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="31"
-    android:versionName="1.7.4" >
+    android:versionCode="32"
+    android:versionName="1.7.5" >
 
     <!--uses-sdk
         android:minSdkVersion="14"
@@ -19,8 +19,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
-        android:theme="@style/MainTheme.Colorful">
-        <!--android:networkSecurityConfig="@xml/network_security_config"-->
+        android:theme="@style/MainTheme.Colorful"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
